<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="act_splash_label_app_name">My Day</string>
    <string name="act_splash_label_app_version">v 0.1</string>
    <string name="act_splash_cdesc_app_logo">Personal Journal/Diary</string>
    <string name="act_splash_label_app_quote">Your Diary, Your Companion</string>

    <string name="act_landing1_label_landing_quote">Your Life Companion</string>
    <string name="act_landing1_label_landing_desc">Diary is a place to keep your memories and confide in privately</string>
    <string name="act_landing1_label_btn_start">GET STARTED</string>

    <string name="act_landing2_label_landing_quote">Safe and Private</string>
    <string name="act_landing2_label_landing_desc">Your Diary belongs to you. Add Passcode to keep your diary private.</string>
    <string name="act_landing2_label_btn_addpasscode">Add Passcode</string>
    <string name="act_landing2_label_btn_skip">SKIP</string>

    <string name="act_landing3_label_landing_quote">Keep Your Memories Forever</string>
    <string name="act_landing3_label_landing_desc">It is free to sync your memories and see them on any of the devices</string>
    <string name="landing3_later">LATER</string>
    <string name="landing3_privacy_policy">Privacy Policy</string>

    <string name="landing4_quote">Congratulations!</string>
    <string name="act_landing4_label_landing_desc">Now you can start using your Diary. Enjoy!</string>
    <string name="act_landing4_label_btn_okay">OK, got it</string>

    <string name="main_quote">The Mind is Everything. What you Think, you Behave </string>

    <string name="default_date">Dec 18 2019</string>
    <string name="new_day_add">ADD NEW DAY</string>

    <string name="activity_money">MY MONEY</string>
    <string name="activity_money_balance">Balance</string>
    <string name="add_money_amt">Amount Deposited</string>
    <string name="remove_money_amt">Amount Withdrawn</string>
    <string name="money_remarks">Remarks</string>
    <string name="last_balance">Rs.28000</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>