<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAppBodyTheme"
    android:padding="25dp"
    tools:context=".activity.LandingActivity3">

    <ImageView
        android:id="@+id/act_landing3_iv_page_logo"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:src="@drawable/img_landing3" />

    <TextView
        android:id="@+id/act_landing3_tv_landing_quote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/act_landing3_iv_page_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/act_landing3_label_landing_quote"
        android:textColor="#FFC300"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/act_landing3_tv_landing_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/act_landing3_tv_landing_quote"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/act_landing3_label_landing_desc"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/act_landing3_btn_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/act_landing3_tv_landing_description"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <com.android.volley.toolbox.NetworkImageView
        android:id="@+id/activity_landing3_profileimage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt_later"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/act_landing3_btn_signin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="loadNextPage"
        android:text="@string/landing3_later"
        android:textColor="#FFC300"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/txt_privacy_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/landing3_privacy_policy"
        android:textSize="12sp" />
</RelativeLayout>